.metadata/.plugins/org.eclipse.cdt.ui/TemperaturaUmidade.build.log
16:39:48 **** Incremental Build of configuration Debug for project TemperaturaUmidade ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:109:23: error: 'LD2_GPIO_Port' undeclared (first use in this function)
  109 |    HAL_GPIO_TogglePin(LD2_GPIO_Port, LD2_Pin);
      |                       ^~~~~~~~~~~~~
../Core/Src/main.c:109:23: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:109:38: error: 'LD2_Pin' undeclared (first use in this function)
  109 |    HAL_GPIO_TogglePin(LD2_GPIO_Port, LD2_Pin);
      |                                      ^~~~~~~
../Core/Src/main.c: In function 'MX_GPIO_Init':
../Core/Src/main.c:234:21: error: 'LD2_GPIO_Port' undeclared (first use in this function)
  234 |   HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_RESET);
      |                     ^~~~~~~~~~~~~
../Core/Src/main.c:234:36: error: 'LD2_Pin' undeclared (first use in this function)
  234 |   HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_RESET);
      |                                    ^~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

16:39:50 Build Failed. 5 errors, 0 warnings. (took 1s.743ms)

